--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,7 @@
 doctype html 
 html 
     head
-        title Pug Template 
+        title Shop Giày 
         link(rel="stylesheet", href="/css/style.css")
     body
         include ./includes/header.pug
