--- a/views/create-user.pug
+++ b/views/create-user.pug
@@ -6,10 +6,23 @@ html
     body
         include ./includes/header.pug
         .container
-            h2 Create User
-            form(action="/create-user" method="POST")
-                input(type="text" placeholder="Username" name="username") 
-                input(type="password" placeholder="Password" name="password")
-                input(type="text" placeholder="Role" name="role")
-                input(type="submit" value="Create")
+             div.content  
+                form(action="/create-user" method="POST")
+                    h1 Create User
+                    div.content 
+                        span User Name 
+                        span(class='required') (*)
+                        input(type="text" placeholder="Username" name="username" required="true")
+                    div.content 
+                        span Password 
+                        span(class='required') (*)
+                        input(type="password" placeholder="Password" name="password" required="true")
+                    div.content
+                        span Role 
+                        span(class='required') (*)
+                        input(type="text" placeholder="Role" name="role" required="true")
+                    button(type="submit") Thêm
+                    if error
+                        div.error
+                            span #{error}
         include ./includes/footer.pug
