--- a/views/profile.pug
+++ b/views/profile.pug
@@ -5,11 +5,17 @@ html
         link(rel="stylesheet", href="/css/style.css")
     body
         include ./includes/header.pug
-        .container
-            h2 Profile
-            form(action="/update-user" method="POST")
-                input(type="text" placeholder="Username" name="username") 
-                input(type="password" placeholder="Password" name="password")
-                input(type="text" placeholder="Role" name="role")
-                input(type="submit" value="Create")
+        .container 
+            div.content  
+                form(action=`/update-profile/${user.id}` method="POST")
+                    h1 Profile
+                    div.content 
+                        span User Name 
+                        span(class='required') (*)
+                        input(type="text" placeholder="Username" name="username" value=user.username)
+                    div.content 
+                        span Password 
+                        span(class='required') (*)
+                        input(type="password" placeholder="Password" name="password" value=user.password)
+                    button(type="submit") Lưu
         include ./includes/footer.pug
