--- a/views/update-user.pug
+++ b/views/update-user.pug
@@ -6,10 +6,20 @@ html
     body
         include ./includes/header.pug
         .container
-            h2 Update User
-            form(action=`/update-user/${user._id}` method="POST")
-                input(type="text" placeholder="Username" name="username" value=user.username) 
-                input(type="password" placeholder="Password" name="password" value=user.password)
-                input(type="text" placeholder="Role" name="role" value=user.role)
-                input(type="submit" value="Save")
+            div.content  
+                form(action=`/update-user/${user._id}` method="POST")
+                    h1 Update User
+                    div.content 
+                        span User Name 
+                        span(class='required') (*)
+                        input(type="text" placeholder="Username" name="username" value=user.username)
+                    div.content 
+                        span Password 
+                        span(class='required') (*)
+                        input(type="password" placeholder="Password" name="password" value=user.password)
+                    div.content 
+                        span Role 
+                        span(class='required') (*)
+                        input(type="text" placeholder="Role" name="role" value=user.role)
+                    button(type="submit") Lưu
         include ./includes/footer.pug
