--- a/views/users.pug
+++ b/views/users.pug
@@ -6,17 +6,17 @@ html
     body
         include ./includes/header.pug
         .container
-            h2 USER List
+            h2 User List
             table.content-table
                 thead
                     td STT 
-                    td Ten dang nhap
+                    td Tên đăng nhập
                     td Role 
-                    td Action 
+                    td Hành động 
                 tbody
                     each user, index in users 
                         tr 
-                            td=index 
+                            td=index + 1
                             td=user.username 
                             td=user.role 
                             td 
